Exact memory sizes

--- a/tex/latex/software/development.tex
+++ b/tex/latex/software/development.tex
@@ -147,10 +147,12 @@ As a result of the optimisations the total size of the binary comes to 3168 byte
         \hline
         Section & Size \\
         \hline
-        Code & 2412 \\
+        System Interrupt Handlers & 204 \\
+        System Init and Shutdown Code & 1184 \\
+        Code & 1128 \\
         Constant Weights & 524 \\
-        Variable Initialisations for the Heap & 108 \\
-        LibC Values & 16 \\
+        Variable Initialisations for the Heap & 116 \\
+        LibC Values & 12 \\
         \hline
     \end{tabular}
     \caption{Binary File Size \label{tab:prog-size}}
