Split .ARM.exidx from heap

--- a/tex/latex/software/development.tex
+++ b/tex/latex/software/development.tex
@@ -151,7 +151,8 @@ As a result of the optimisations the total size of the binary comes to 3168 byte
         System Init and Shutdown Code & 1184 \\
         Code & 1128 \\
         Constant Weights & 524 \\
-        Variable Initialisations for the Heap & 116 \\
+        Variable Initialisations for the Heap & 108 \\
+        .ARM.exidx & 8 \\
         LibC Values & 12 \\
         \hline
     \end{tabular}
