--- a/tex/latex/report.tex
+++ b/tex/latex/report.tex
@@ -3,7 +3,6 @@
 %% ---------------------------------------------------------------- 
 \documentclass{ecsdocs/ecsgdp}         % Use the GDP Report Style
 \graphicspath{{../Figures/}}   % Location of your graphics files
-\usepackage{natbib}            % Use Natbib style for the refs.
 \usepackage{array}
 \usepackage{listings}
 \usepackage{pdflscape}
@@ -112,7 +111,7 @@
 	\input{appendices/risks}
 	%
 	\backmatter
-	\bibliographystyle{../../bibtex/bst/ecsdocs/ecs}
+	\bibliographystyle{../../bibtex/bst/IEEEtran}
 	\bibliography{ECS}
 \end{document}
 %% ----------------------------------------------------------------
