Moves sensor libraries to mbed and starts adding serial communication

--- a/tex/latex/ECS.bib
+++ b/tex/latex/ECS.bib
@@ -111,3 +111,18 @@ mBed website
 	title = {{mBed Developer Website}},
 	url ={https://developer.mbed.org/handbook/mbed-Microcontrollers}
 }
+
+Sensor library
+@MISC{sensory_library,
+	author = {Seeed-Studio},
+	title = {Library for the Xadow MPU6050},
+	url = {https://github.com/Seeed-Studio/Xadow_IMU_6DOF}
+}
+
+C232HM datasheet
+@MISC{c232hm_datasheet,
+	author = {{Future Technology Devices International Ltd}},
+	title = {{C232HM Datasheet}},
+	note = {Rev 1.1},
+	url = {http://www.ftdichip.com/Support/Documents/DataSheets/Cables/DS_C232HM_MPSSE_CABLE.PDF}
+}
