Moved Gantt Charts to Appendix

--- a/report.tex
+++ b/report.tex
@@ -98,7 +98,6 @@
 	\input{management/management}
 	\input{management/planning}
 	\input{management/division}
-	\input{management/gantt}
 	\input{management/client}
 
 	% Results chapter
@@ -109,6 +108,7 @@
 
 	\appendix
 	\input{appendices/risks}
+	\input{appendices/gantt}
 	%
 	\backmatter
 	\bibliographystyle{.style/IEEEtran}
