--- a/report.tex
+++ b/report.tex
@@ -81,6 +81,7 @@
 	\input{software/software}
 	\input{software/exercise-detection}
 	\input{software/machine-learning}
+	\input{software/algorithm}
 	\input{software/development}
 
 	% Hardware chapter
