--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -94,6 +94,13 @@ To enable the device to communicate with the desired baud rate when the system c
 
 For access to be granted to the DL, the Divisor Latch Access Bit (DLAB) needs to be set. This value is stored within the Line Control Register as the seventh bit. The final register is the Fractional Divide Register which contains the DIVADDVAL and MULVAL values. DIVADDVAL is stored within the lowest four bits, whilst MULVAL is stored within the next four lowest bits. 
 
+Using these values, the baud rate can be calculated using Equation~\ref{eq:serial_baud_rate} \cite{mbed_datasheet}.
+
+\begin{equation}
+	\label{eq:serial_baud_rate}
+	UART_{baud rate} = \frac{CLK}{16 * (256 * DLM + DLL) * (1 + \frac{DivAddVal}{MulVal})}
+\end{equation}
+
 \subsubsection{Auto-Baud}
 
 One possible method to account for this is a feature provided within the processor called Auto-Baud\cite{mbed_datasheet}. This is where the device waits on receiving communication upon its RX pin and of the data coming in, it measures the baud rate between a falling edge and a subsequent rising or falling edge dependant on the mode set within the registers.
