Fixes type in figures directory for UNIX systems

--- a/report.tex
+++ b/report.tex
@@ -2,7 +2,7 @@
 %% GDP.tex
 %% ---------------------------------------------------------------- 
 \documentclass{.style/ecsgdp}         % Use the GDP Report Style
-\graphicspath{{./Figures/}}   % Location of your graphics files
+\graphicspath{{./figures/}}   % Location of your graphics files
 \usepackage{array}
 \usepackage{listings}
 \usepackage{pdflscape}
